# SedSat3

./: .gitignore  .gitmodules  Binary_8cpp.html  Binary_8cpp__incl.map  Binary_8cpp_source.html  Binary_8h.html  Binary_8h.js  Binary_8h__dep__incl.map  Binary_8h__dep__incl.md5  Binary_8h__incl.map  Binary_8h__incl.md5  Binary_8h_source.html  CMBSource.pro  CMB_Source.aip  CMB_Source.back.aip  CMakeLists.txt  Doxyfile  FilePushButton_8cpp.html  FilePushButton_8cpp__incl.map  FilePushButton_8cpp_source.html  FilePushButton_8h.html  FilePushButton_8h__dep__incl.map  FilePushButton_8h__dep__incl.md5  FilePushButton_8h__incl.map  FilePushButton_8h_source.html  GADistribution_8cpp.html  GADistribution_8cpp__incl.map  GADistribution_8cpp__incl.md5  GADistribution_8cpp_source.html  GADistribution_8h.html  GADistribution_8h.js  GADistribution_8h__dep__incl.map  GADistribution_8h__incl.map  GADistribution_8h_source.html  GA_8cpp.html  GA_8cpp__incl.map  GA_8cpp__incl.md5  GA_8cpp_source.html  GA_8h.html  GA_8h.js  (+1142 more)
.github/workflows/: docs.yml
docs/: sedsat3.tag
docs/html/: Binary_8cpp.html  Binary_8cpp.js  Binary_8cpp__incl.map  Binary_8cpp__incl.md5  Binary_8cpp_source.html  Binary_8h.html  Binary_8h__dep__incl.map  Binary_8h_source.html  FilePushButton_8cpp.html  FilePushButton_8cpp__incl.map  FilePushButton_8cpp__incl.md5  FilePushButton_8cpp_source.html  FilePushButton_8h.html  FilePushButton_8h.js  FilePushButton_8h__dep__incl.map  FilePushButton_8h__incl.map  FilePushButton_8h__incl.md5  FilePushButton_8h_source.html  GADistribution_8cpp.html  GADistribution_8cpp__incl.map  GADistribution_8cpp_source.html  GADistribution_8h.html  GADistribution_8h__dep__incl.map  GADistribution_8h__dep__incl.md5  GADistribution_8h__incl.map  GADistribution_8h__incl.md5  GADistribution_8h_source.html  GA_8cpp.html  GA_8cpp__incl.map  GA_8cpp__incl.md5  GA_8cpp_source.html  GA_8h.html  GA_8h.js  GA_8h__incl.map  GA_8h__incl.md5  GA_8h_source.html  GA_8hpp.html  GA_8hpp__incl.map  GA_8hpp__incl.md5  GA_8hpp_source.html  (+908 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_2.js  classes_5.js  classes_6.js  classes_8.js  classes_c.js  defines_0.js  defines_2.js  defines_3.js  enums_1.js  enums_4.js  enums_6.js  enums_8.js  enums_9.js  enums_e.js  enumvalues_1.js  enumvalues_10.js  (+51 more)
docs/latex/: Binary_8cpp.tex  Binary_8cpp__incl.md5  Binary_8cpp_source.tex  Binary_8h.tex  Binary_8h__dep__incl.md5  Binary_8h__incl.md5  Binary_8h_source.tex  FilePushButton_8cpp.tex  FilePushButton_8cpp__incl.md5  FilePushButton_8cpp_source.tex  FilePushButton_8h.tex  FilePushButton_8h__dep__incl.md5  FilePushButton_8h__incl.md5  FilePushButton_8h_source.tex  GADistribution_8cpp.tex  GADistribution_8cpp__incl.md5  GADistribution_8cpp_source.tex  GADistribution_8h.tex  GADistribution_8h__dep__incl.md5  GADistribution_8h__incl.md5  GADistribution_8h_source.tex  GA_8cpp.tex  GA_8cpp__incl.md5  GA_8cpp_source.tex  GA_8h.tex  GA_8h__dep__incl.md5  GA_8h__incl.md5  GA_8h_source.tex  GA_8hpp.tex  GA_8hpp__dep__incl.md5  GA_8hpp__incl.md5  GA_8hpp_source.tex  GA__impl_8cpp.tex  GA__impl_8cpp_source.tex  Individual_8cpp.tex  Individual_8cpp__incl.md5  Individual_8cpp_source.tex  Individual_8h.tex  Individual_8h__dep__incl.md5  Individual_8h__incl.md5  (+513 more)
examples/: SampleData.xlsx  simple_case_with_isotope.xlsx  simple_case_with_isotope_calc.xlsx  virtual_mixture.xlsx
include/: cmbdistribution.h  concentrationset.h  conductor.h  distribution.cpp  distribution.h  drand.h  elemental_profile.h  elemental_profile_set.h  interface.h  observation.h  parameter.h  sourcesinkdata.h
include/GA/: Binary.h  GA.h  GA.hpp  GADistribution.h  Individual.h
include/MCMC/: MCMC.h  MCMC.hpp
resources/: forms_structures.json  sedsat3.desktop  tools.json
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  defines_1.js  defines_4.js  defines_5.js  enums_0.js  enums_2.js  enums_3.js  (+73 more)
src/: cmbdistribution.cpp  concentrationset.cpp  conductor.cpp  distribution.cpp  elemental_profile.cpp  elemental_profile_set.cpp  interface.cpp  observation.cpp  parameter.cpp  sourcesinkdata.cpp
src/GA/: Binary.cpp  GADistribution.cpp
x64/Release/CMBSource.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMBSource.lastbuildstate  CMBSource.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
